# njord

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  book.toml  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
.config/githooks/: pre-commit
.config/jetbrains/: Test all.run.xml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  design_considerations.md  feature_request.md
.github/workflows/: ci.yml  core.yml  docs.yml  machete.yml  master-ci.yml  pr-ci.yml  release.yml  security.yml  website.yml
.run/: Build all.run.xml  Build njord.run.xml  Build njord_derive.run.xml  SQLite Integration Tests.run.xml  Test all.run.xml  tests.run.xml
docs/: CNAME  book.toml  index.html  main.rs
docs/src/: README.md  SUMMARY.md  getting-started.md  not-found.md
docs/src/sqlite/: connection.md  define-tables.md  drop.md  initialize-database-with-tables.md  insert.md  select.md
njord/: Cargo.toml
njord/db/: create.db  insert.db  insert_row.db  open.db  select.db  select_join.db
njord/db/test/: mysql.sql
njord/db/test/mssql/: setup.sql
njord/db/test/oracle/: 2_setup.sql
njord/src/: column.rs  condition.rs  keys.rs  lib.rs  query.rs  table.rs  util.rs
njord/src/mariadb/: delete.rs  error.rs  insert.rs  mod.rs  select.rs  update.rs  util.rs
njord/src/mssql/: delete.rs  error.rs  insert.rs  mod.rs  select.rs  update.rs  util.rs
njord/src/mysql/: delete.rs  error.rs  insert.rs  mod.rs  select.rs  update.rs  util.rs
njord/src/oracle/: delete.rs  error.rs  insert.rs  mod.rs  select.rs  update.rs
njord/src/postgres/: delete.rs  error.rs  insert.rs  mod.rs  select.rs  update.rs
njord/src/sqlite/: condition.rs  create.rs  delete.rs  drop.rs  drop_table.rs  error.rs  init.rs  insert.rs  mod.rs  query.rs  select.rs  update.rs  util.rs
njord/tests/: sqlite_test.rs
njord/tests/common/: mod.rs
njord/tests/mariadb/: delete_test.rs  insert_test.rs  mod.rs  open_test.rs  select_joins_test.rs  select_test.rs  update_test.rs
njord/tests/mssql/: delete_test.rs  insert_test.rs  open_test.rs  select_joins_test.rs  select_test.rs  update_test.rs
njord/tests/mysql/: delete_test.rs  insert_test.rs  mod.rs  open_test.rs  select_joins_test.rs  select_test.rs  update_test.rs
njord/tests/oracle/: delete_test.rs  insert_test.rs  select_joins_test.rs  select_test.rs  update_test.rs
njord/tests/postgres/: mod.rs
njord/tests/sqlite/: create_test.rs  delete_test.rs  insert_test.rs  mod.rs  open_test.rs  raw_test.rs  select_joins_test.rs  select_test.rs  update_test.rs
njord_cli/: Cargo.toml
njord_cli/src/: command.rs  main.rs  migration.rs  util.rs
njord_cli/templates/: njord.toml
njord_cli/templates/migrations/00000000000000_njord_initial_setup/postgres/: down.sql  up.sql
njord_cli/templates/migrations/00000000000000_njord_initial_setup/sqlite/: up.sql
njord_derive/: Cargo.toml
njord_derive/src/: lib.rs  util.rs
njord_examples/: Cargo.toml
njord_examples/mariadb/: Cargo.toml  README.md
njord_examples/migrations/00000000000000_njord_initial_setup/: down.sql
njord_examples/mssql/: Cargo.toml
njord_examples/mssql/init_scripts/: 1_create_tables.sql  create_tables.sql
njord_examples/mssql/src/: main.rs  schema.rs
njord_examples/mysql/: Cargo.toml  README.md  init.sql
njord_examples/mysql/src/: main.rs  schema.rs
njord_examples/oracle/: Cargo.toml  README.md
njord_examples/oracle/init_scripts/: 1_create_tables.sql
njord_examples/oracle/src/: main.rs
njord_examples/postgres/: Cargo.toml
njord_examples/postgres/src/: main.rs
njord_examples/sqlite/: Cargo.toml  generate.sh  neo.db  rollback.sh  run.sh  setup.sh
njord_examples/sqlite/migrations/00000000000000_njord_initial_setup/: down.sql  up.sql
njord_examples/sqlite/src/: main.rs  schema.rs
njord_examples/sqlite_cli/: Cargo.toml
njord_examples/sqlite_cli/migrations/00000000000001_init_tables/: up.sql
njord_examples/sqlite_cli/src/: schema.rs
njord_ml/: Cargo.toml
njord_util/: Cargo.toml
njord_util/src/: keys.rs  lib.rs
resources/: logo.psd
src/: app.css  getting-started.md  lib.rs  table.rs  util.rs
src/lib/components/: Box.svelte  DatabaseBar.svelte  Dropdown.svelte  Footer.svelte  GithubBar.svelte  Navbar.svelte  SocialLink.svelte
src/lib/components/icons/: Alert.svelte  Code.svelte  Coffee.svelte  Commit.svelte  Database.svelte  Discord.svelte  Github.svelte  Hamburger.svelte  Star.svelte
src/routes/: +layout.svelte  +page.svelte
src/server/: github.server.js
src/sqlite/: delete.rs  init.rs  insert.rs  mod.rs  select.rs  table.rs  update.rs
tests/sqlite/: mod.rs
tests/unit/: sqlite_test.rs
website/: .gitignore  jsconfig.json  package-lock.json  package.json  tailwind.config.js
website/src/: app.css  app.html
website/src/helpers/: helpers.js
website/src/lib/components/: Box.svelte  DatabaseBar.svelte  DatabaseCard.svelte  Dropdown.svelte  Footer.svelte  GithubBar.svelte  Link.svelte  Navbar.svelte  ThemeSwitcher.svelte
website/src/lib/components/icons/: Activity.svelte  Close.svelte  Code.svelte  Coffee.svelte  Commit.svelte  Copy.svelte  Database.svelte  Github.svelte  Hamburger.svelte  Merge.svelte  Moon.svelte  PullReq.svelte  Star.svelte  Sun.svelte  XTwitter.svelte
website/src/lib/components/sections/: Hero.svelte  InfoBar.svelte
website/src/routes/: +layout.server.js  +layout.svelte  +page.svelte
website/src/server/: github.server.js
