[package]
name = "njord"
version = "0.3.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = "A lightweight ORM library in Rust."
license = "BSD-3"
documentation = "https://docs.rs/njord/latest/njord/"
repository = "https://github.com/njord-rs/njord"
readme = "../README.md"
rust-version = "1.81.0"
homepage = "https://njord.rs"
keywords = ["orm", "database", "sql"]

[dependencies]
njord_derive = { version = "0.3.0", path = "../njord_derive" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
log = "0.4.22"
rand = "0.8.4"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
njord_derive = { version = "0.3.0", path = "../njord_derive" }

# This cfg cannot be enabled, but it still forces Cargo to keep njord_derive's
# version in lockstep with njord's, even if someone depends on the two crates
# separately with njord's "derive" feature disabled. Every njord_derive release
# is compatible with exactly one serde release because the generated code
# involves nonpublic APIs which are not bound by semver.
[target.'cfg(any())'.dependencies]
njord_derive = { version = "0.3.0", path = "../njord_derive" }

[features]
default = ["sqlite"]
sqlite = []

[[test]]
name = "sqlite_tests"
path = "tests/sqlite/mod.rs"
