[package]
name = "njord"
version = "0.4.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = "A versatile, feature-rich Rust ORM."
license = "BSD-3-Clause"
documentation = "https://docs.rs/njord/latest/njord/"
repository = "https://github.com/njord-rs/njord"
readme = "../README.md"
rust-version = "1.81.0"
homepage = "https://njord.rs"
keywords = ["orm", "database", "sql"]

[dependencies]
njord_derive = { version = "0.4.0", path = "../njord_derive" }
log = "0.4.22"
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }
serde = { version = "1.0.215", features = ["derive"] }
mysql = { version = "25.0.1", optional = true }
oracle = { version = "0.6.2", features = ["chrono"], optional = true }
tiberius = { version = "0.12.3", default-features = false, features = ["chrono", "time", "tds73", "rust_decimal", "bigdecimal", "rustls"], optional = true }
tokio = { version = "1.41.1", features = ["full"], optional = true }
tokio-util = { version = "0.7.12", features = ["compat"], optional = true }

[dev-dependencies]
njord_derive = { version = "0.4.0", path = "../njord_derive" }

# This cfg cannot be enabled, but it still forces Cargo to keep njord_derive's
# version in lockstep with njord's, even if someone depends on the two crates
# separately with njord's "derive" feature disabled. Every njord_derive release
# is compatible with exactly one serde release because the generated code
# involves nonpublic APIs which are not bound by semver.
[target.'cfg(any())'.dependencies]
njord_derive = { version = "0.4.0", path = "../njord_derive" }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
mysql = ["dep:mysql"]
oracle = ["dep:oracle"]
mssql = ["dep:tiberius", "dep:tokio", "dep:tokio-util"]

[[test]]
name = "sqlite_tests"
path = "tests/sqlite/mod.rs"

[[test]]
name = "mysql_tests"
path = "tests/mysql/mod.rs"

[[test]]
name = "oracle_tests"
path = "tests/oracle/mod.rs"

[[test]]
name = "mssql_tests"
path = "tests/mssql/mod.rs"
