[package]
name = "njord_cli"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = "Provides the CLI for Njord."
license = "GPL-3.0"
documentation = "https://docs.rs/njord/latest/njord/"
repository = "https://github.com/mjovanc/njord"
readme = "crates-io.md"
rustc = "1.74.0"

[[bin]]
name = "njord"
path = "src/main.rs"
doc = false

[features]
sqlite = []


[dependencies]
clap = { version = "4.4.11", features = ["cargo", "derive"] }
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
