[package]
name = "njord_cli"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = "Provides the CLI for Njord."
license = "GPL-3.0"
documentation = "https://docs.rs/njord/latest/njord/"
repository = "https://github.com/mjovanc/njord"
readme = "crates-io.md"
rust-version = "1.74.0"

[[bin]]
name = "njord"
path = "src/main.rs"
doc = false

[features]
default = [
    "sqlite",
] # to disable this the user needs to run with the flag --no-default-features
sqlite = []


[dependencies]
njord = { version = "0.1.0", path = "../njord" }
njord_derive = { version = "0.1.0", path = "../njord_derive" }
rusqlite = { version = "0.31.0", features = ["bundled"] }
clap = { version = "4.5.3", features = ["cargo", "derive"] }
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
chrono = "0.4"
