[package]
name = "njord_cli"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = "Provides the CLI for Njord ORM."
license = "BSD-3-Clause"
documentation = "https://docs.rs/njord/latest/njord/"
repository = "https://github.com/njord-rs/njord"
readme = "../README.md"
rust-version = "1.81.0"

[[bin]]
name = "njord"
path = "src/main.rs"
doc = false

[features]
default = [
    "sqlite",
] # to disable this the user needs to run with the flag --no-default-features
sqlite = []

[dependencies]
njord = { version = "0.5.0", path = "../njord" }
njord_derive = { version = "0.5.0", path = "../njord_derive" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
clap = { version = "4.5.28", features = ["cargo", "derive"] }
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
