[package]
name = "njord_derive"
version = "0.4.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = "You should not use this crate directly, it is internal to Njord."
license = "BSD-3-Clause"
documentation = "https://docs.rs/njord/latest/njord/"
repository = "https://github.com/njord-rs/njord"
readme = "../README.md"
rust-version = "1.81.0"
homepage = "https://njord.rs"
keywords = ["orm", "database", "sql"]

[lib]
name = "njord_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0"
syn = { version = "2.0.87", features = ["full"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
regex = "1.11.1"