[package]
name = "njord_derive"
version = "0.5.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = "You should not use this crate directly, it is internal to Njord ORM."
license = "BSD-3-Clause"
documentation = "https://docs.rs/njord/latest/njord/"
repository = "https://github.com/njord-rs/njord"
readme = "../README.md"
rust-version = "1.81.0"
homepage = "https://njord.rs"
keywords = ["orm", "database", "sql"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "njord_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0"
syn = { version = "2.0.98", features = ["full"] }

[package.metadata.docs.rs]
all-features = true