[package]
name = "njord_util"
version = "0.3.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = "You should not use this crate directly, it is internal to Njord."
license = "BSD-3"
documentation = "https://docs.rs/njord/latest/njord/"
repository = "https://github.com/mjovanc/njord"
readme = "../README.md"
rust-version = "1.81.0"
homepage = "https://njord.rs"
keywords = ["orm", "database", "sql"]

[dependencies]
