[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
njord = { version = "0.2.1", path = "../../njord" }
njord_derive = { version = "0.2.1", path = "../../njord_derive" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.113"