[package]
name = "sqlite"
publish = false
version = "0.1.0"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
njord = { version = "0.3.0", path = "../../njord", features = ["sqlite"] }
njord_derive = { version = "0.3.0", path = "../../njord_derive" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.117"
